// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkCustodianState not in trading 1`] = `"orderBook"`;

exports[`checkCustodianState not in trading 2`] = `
Object {
  "pair": "orderBookSnapshot",
  "version": 1234567890,
}
`;

exports[`checkCustodianState not in trading 3`] = `
Array [
  Array [
    "code1|code2",
    Object {
      "pair": "orderBookSnapshot",
      "version": 1234567890,
    },
    Object {
      "pair": "code1|code2",
      "prevVersion": 123,
      "updates": Array [
        Object {
          "change": 456,
          "count": -2,
          "price": 123,
          "side": "bid",
        },
        Object {
          "change": 123,
          "count": -3,
          "price": 456,
          "side": "ask",
        },
      ],
      "version": 1234567890,
    },
  ],
]
`;

exports[`checkCustodianState not in trading 4`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderUpdate add 1`] = `
Array [
  Array [
    Object {
      "liveOrder": Object {
        "account": "account1",
        "amount": 10,
        "balance": 5,
        "createdAt": 1234567890,
        "currentSequence": 5,
        "expiry": 1234567890000,
        "fee": 1,
        "feeAsset": "feeAsset",
        "fill": 0,
        "initialSequence": 1,
        "matching": 0,
        "orderHash": "orderHash1",
        "pair": "pair",
        "price": 100,
        "side": "bid",
      },
      "method": "add",
    },
  ],
]
`;

exports[`handleOrderUpdate add 2`] = `
Array [
  Array [
    Array [
      "orderBookLevelUpdate",
    ],
  ],
]
`;

exports[`handleOrderUpdate add match 1`] = `
Array [
  Array [
    "orderMatchRequests",
  ],
]
`;

exports[`handleOrderUpdate add match 2`] = `
Array [
  Array [
    Object {
      "liveOrder": Object {
        "account": "account1",
        "amount": 10,
        "balance": 5,
        "createdAt": 1234567890,
        "currentSequence": 5,
        "expiry": 1234567890000,
        "fee": 1,
        "feeAsset": "feeAsset",
        "fill": 0,
        "initialSequence": 1,
        "matching": 0,
        "orderHash": "orderHash1",
        "pair": "pair",
        "price": 100,
        "side": "bid",
      },
      "method": "add",
    },
  ],
]
`;

exports[`handleOrderUpdate add match 3`] = `
Array [
  Array [
    Array [
      "orderBookLevelUpdate",
      "orderBookLevelUpdates1",
      "orderBookLevelUpdates2",
    ],
  ],
]
`;

exports[`handleOrderUpdate custodian not in trading 1`] = `
Array [
  Array [
    "orderHash1",
  ],
]
`;

exports[`handleOrderUpdate loadingOrders 1`] = `
Array [
  Object {
    "liveOrder": Object {
      "account": "account1",
      "amount": 10,
      "balance": 5,
      "createdAt": 1234567890,
      "currentSequence": 5,
      "expiry": 1234567890000,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 0,
      "initialSequence": 1,
      "matching": 0,
      "orderHash": "orderHash1",
      "pair": "pair",
      "price": 100,
      "side": "bid",
    },
    "method": "add",
    "requestor": "requestor",
    "status": "status",
  },
]
`;

exports[`handleOrderUpdate terminate 1`] = `
Array [
  Array [
    Object {
      "liveOrder": Object {
        "account": "account1",
        "amount": 10,
        "balance": 5,
        "createdAt": 1234567890,
        "currentSequence": 5,
        "expiry": 1234567890000,
        "fee": 1,
        "feeAsset": "feeAsset",
        "fill": 0,
        "initialSequence": 1,
        "matching": 0,
        "orderHash": "orderHash1",
        "pair": "pair",
        "price": 100,
        "side": "bid",
      },
      "method": "terminate",
    },
  ],
]
`;

exports[`handleOrderUpdate terminate 2`] = `
Array [
  Array [
    Array [
      "orderBookLevelUpdate",
    ],
  ],
]
`;

exports[`handleOrderUpdate terminate a non existing liveOrder 1`] = `
Object {
  "orderHash1": 5,
}
`;

exports[`initialize 1`] = `
Array [
  Array [
    [Function],
    10000,
  ],
  Array [
    [Function],
    900000,
  ],
]
`;

exports[`initialize 2`] = `
Array [
  Array [
    "dualClassWrapper",
  ],
  Array [
    "dualClassWrapper",
  ],
]
`;

exports[`initialize 3`] = `
Array [
  Array [
    "code1|code2",
    [Function],
  ],
]
`;

exports[`initialize 4`] = `
Array [
  Array [
    "channel",
    "orderQueueItem",
  ],
]
`;

exports[`loadLiveOrders 1`] = `"orderBook"`;

exports[`loadLiveOrders 2`] = `"orderBookSnapshot"`;

exports[`loadLiveOrders 3`] = `
Array [
  Array [
    "liveOrders",
  ],
]
`;

exports[`loadLiveOrders 4`] = `
Array [
  Array [
    "code1|code2",
    "orderBook",
  ],
]
`;

exports[`loadLiveOrders 5`] = `
Array [
  Array [
    "orderBook",
    "liveOrders",
    false,
  ],
]
`;

exports[`loadLiveOrders 6`] = `
Array [
  Array [
    "orderMatchRequests",
  ],
]
`;

exports[`loadLiveOrders 7`] = `
Array [
  Array [
    "code1|code2",
    "orderBookSnapshot",
  ],
]
`;

exports[`loadLiveOrders 8`] = `
Array [
  Array [
    "pending",
    Object {
      "liveOrder": Object {
        "account": "account1",
        "amount": 10,
        "balance": 5,
        "createdAt": 1234567890,
        "currentSequence": 5,
        "expiry": 1234567890000,
        "fee": 1,
        "feeAsset": "feeAsset",
        "fill": 0,
        "initialSequence": 1,
        "matching": 0,
        "orderHash": "orderHash1",
        "pair": "pair",
        "price": 100,
        "side": "bid",
      },
      "method": "add",
      "requestor": "requestor",
      "status": "status",
    },
  ],
]
`;

exports[`loadLiveOrders no match 1`] = `"orderBook"`;

exports[`loadLiveOrders no match 2`] = `"orderBookSnapshot"`;

exports[`loadLiveOrders no match 3`] = `
Array [
  Array [
    "liveOrders",
  ],
]
`;

exports[`loadLiveOrders no match 4`] = `
Array [
  Array [
    "code1|code2",
    "orderBook",
  ],
]
`;

exports[`loadLiveOrders no match 5`] = `
Array [
  Array [
    "orderBook",
    "liveOrders",
    false,
  ],
]
`;

exports[`loadLiveOrders no match 6`] = `
Array [
  Array [
    "code1|code2",
    "orderBookSnapshot",
  ],
]
`;

exports[`terminateOrder 1`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "code1|code2",
      "requestor": "orderBooks",
      "status": "reset",
    },
  ],
]
`;

exports[`updateOrderBook add 1`] = `
Object {
  "change": 456,
  "count": 1,
  "price": 123,
  "side": "bid",
}
`;

exports[`updateOrderBook add 2`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
    },
    Object {
      "balance": 456,
      "initialSequence": 111,
      "orderHash": "orderHash",
      "price": 123,
    },
    true,
    false,
  ],
]
`;

exports[`updateOrderBook add 3`] = `
Object {
  "orderHash": Object {
    "balance": 456,
    "initialSequence": 111,
    "orderHash": "orderHash",
    "price": 123,
    "side": "bid",
  },
}
`;

exports[`updateOrderBook terminate 1`] = `
Object {
  "change": -400,
  "count": 1,
  "price": 123,
  "side": "bid",
}
`;

exports[`updateOrderBook terminate 2`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
    },
    Object {
      "balance": 400,
      "initialSequence": 111,
      "orderHash": "orderHash",
      "price": 123,
    },
    true,
    true,
  ],
]
`;

exports[`updateOrderBook update 1`] = `
Object {
  "change": -56,
  "count": 0,
  "price": 123,
  "side": "bid",
}
`;

exports[`updateOrderBook update 2`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
    },
    Object {
      "balance": 400,
      "initialSequence": 111,
      "orderHash": "orderHash",
      "price": 123,
    },
    true,
    false,
  ],
]
`;

exports[`updateOrderBook update 3`] = `
Object {
  "orderHash": Object {
    "balance": 400,
    "initialSequence": 111,
    "orderHash": "orderHash",
    "price": 123,
    "side": "bid",
  },
}
`;

exports[`updateOrderBookSnapshot 1`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
      "pair": "pair",
      "version": 0,
    },
    Object {
      "pair": "code1|code2",
      "prevVersion": 0,
      "updates": Array [
        Object {
          "change": 1,
          "count": 0,
          "price": 1,
          "side": "bid",
        },
        Object {
          "change": 2,
          "count": 1,
          "price": 2,
          "side": "bid",
        },
      ],
      "version": 1234567890,
    },
  ],
]
`;

exports[`updateOrderBookSnapshot 2`] = `
Array [
  Array [
    "code1|code2",
    Object {
      "asks": Array [],
      "bids": Array [],
      "pair": "pair",
      "version": 0,
    },
    Object {
      "pair": "code1|code2",
      "prevVersion": 0,
      "updates": Array [
        Object {
          "change": 1,
          "count": 0,
          "price": 1,
          "side": "bid",
        },
        Object {
          "change": 2,
          "count": 1,
          "price": 2,
          "side": "bid",
        },
      ],
      "version": 1234567890,
    },
  ],
]
`;

exports[`updateOrderSequences 1`] = `16`;

exports[`updateOrderSequences 2`] = `
Object {
  "orderHash1": 5,
  "orderHash2": 6,
  "orderHash3": 7,
  "orderHash4": 8,
  "orderHash5": 13,
  "orderHash6": 14,
  "orderHash7": 15,
  "orderHash8": 16,
}
`;
